[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "command-center"
version = "0.1.0"
description = "Social media automation monorepo"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.0",
    "supabase>=2.0",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    # Only used by scripts/generate_youtube_second_refresh_token.py — a
    # one-time local script. Not needed on Render at runtime because the
    # YouTube second-channel upload flow lives entirely in the dashboard
    # Node runtime.
    "google-auth>=2.23",
    "google-auth-oauthlib>=1.1",
]

[tool.setuptools.packages.find]
include = ["core*", "platforms*", "cron*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
